objects/BOGO_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Quantity__c</fullName>
        <label>Parent Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Tier_Set__c</fullName>
        <label>Parent Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipLabel>BOGO Details</relationshipLabel>
        <relationshipName>BOGO_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prorate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Prorate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Quantity__c</fullName>
        <label>Related Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Tier_Set__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipLabel>BOGO Details (Related Tier Set)</relationshipLabel>
        <relationshipName>BOGO_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BOGO Detail</label>
    <nameField>
        <displayFormat>BOGO-{00000}</displayFormat>
        <label>BOGO Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOGO Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>